--- a/app/views/posts/about.html.haml
+++ b/app/views/posts/about.html.haml
@@ -28,48 +28,37 @@
       %li
         %a{:href => "https://twitter.com/version_journal", :target => "_blank", :title => "Follow us on Twitter"}
           %img{:src => "/images/twitter.png"}/
-    %p{:style => "border-bottom: 1px solid #EAEAEA; width: 620px; padding: 0px 20px 20px 0px; margin-bottom:20px;"}
+    %p{:style => "border-bottom: 1px solid #EAEAEA;  padding: 0px 20px 20px 0px; margin-bottom:20px;"}
       %em Version
       is produced by the Visual Arts Department, University of California, San Diego; the UCSD Division of Arts and Humanities; the California Institute for Telecommunications and Information Technology (CAL-IT2); and the Software Studies Initiative.
-    %p{:style => "border-bottom: 1px solid #EAEAEA; width: 620px; padding: 0px 20px 20px 0px; margin-bottom:20px;"}
+    %p{:style => "border-bottom: 1px solid #EAEAEA; padding: 0px 20px 20px 0px; margin-bottom:20px;"}
+
       %span.job Editors
       %br
-        %span.person>
-          %a{:href => "http://www.jordancrandall.com/", :target => "_blank"} Jordan Crandall
-        ,
-        %span.person
-          %a{:href => "http://calebwaldorf.net", :target => "_blank"} Caleb Waldorf
-        %br
-          %br
-            %span.job Managing Editor
-            %br
-              %span.person Tara Zepel
-              %br
-                %br
-                  %span.job Contributing Editors
-                  %br
-                    %span.person
-                      %a{:href => "http://www.zachblas.info/", :target => "_blank"}> Zach Blas
-                      ,
-                      = succeed "," do
-                        %a{:href => "http://transreal.org", :target => "_blank"} Micha Cárdenas
-                      %a{:href => "http://elleelleelle.org/", :target => "_blank"} Elle Mehrmand
-                    %br
-                      %br
-                        %span.job Website Design &amp; Development
-                        %br
-                          %span.person
-                            %a{:href => "http://calebwaldorf.net", :target => "_blank"} Caleb Waldorf
-                          \&amp;
-                          %span.person
-                            %a{:href => "http://www.icewhistle.com/", :target => "_blank"} John W. Pattenden-Fail
-                          %br
-                            %br
-                              %span.job Founding Editor
-                              %br
-                                %span.person
-                                  %a{:href => "http://www.jordancrandall.com/", :target => "_blank"} Jordan Crandall
-    %p{:style => "border-bottom: 1px solid #EAEAEA; width: 620px; padding: 0px 20px 20px 0px; margin-bottom:0px;font-size:11px; color:#666666;"} Additional support provided by the UCSD Center for the Humanities; the University of California Institute for Research in the Arts (UCIRA); the Center for Research in Computing and the Arts (CRCA); and the University of California Digital Arts Research Network (UC DARnet).
+      %span.person=link_to 'Jordan Crandall', 'http://www.jordancrandall.com/', target: :_blank
+      %br
+      %span.person Cristina Rivera-Garza
+      %br
+      %span.person Allen Shelton
+      %br
+      %span.person Lesley Stern
+      %br
+      %br
+      %span.job Managing Editor
+      %br
+      %span.person Katrin Pesch
+      %br
+      %br
+      %span.job Technical director
+      %br
+      %span.person= link_to 'John W. Fail', 'http://icewhistle.com', target: :_blank
+      %br/
+      %br/
+      %span.job Editorial Assistant
+      %br/
+      %span.person Jeffrey Pinkston
+
+    %p{:style => "border-bottom: 1px solid #EAEAEA;  padding: 0px 20px 20px 0px; margin-bottom:0px;font-size:11px; color:#666666;"} Additional support provided by the UCSD Center for the Humanities; the University of California Institute for Research in the Arts (UCIRA); the Center for Research in Computing and the Arts (CRCA); and the University of California Digital Arts Research Network (UC DARnet).
   .right_column
     - @posts.each_index do |p|
-      = render :partial => 'layouts/component', :locals => {:position => p, :item  => @posts[p], :side => ''}
+      = render :partial => 'layouts/component', :locals => {:position => p, :item  => @posts[p].item, :side => '', :ajax => false}
