--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,56 +1,1 @@
-.top_half
-  .top
-    .logo
-    .close{:onclick => "$('#overlay').fadeOut();"}
-      %a{:href => "#"}
-        %img{:src => "/images/close.png"}/
-  .content
-    .title
-      %img#printlogo{:align => "left", :src => "/images/header_vlogo.png"}
-        %ul
-          %li
-            - unless @post.item.category.blank?
-              = link_to @post.item.category.name, {:controller => 'posts', :action => 'cat', :id => @post.item.category.id}
-          %li
-            \.
-            - unless @post.item.author.blank?
-              = link_to @post.item.author.name, '/contributors'
-          %li
-            \.#{@post.item.title}
-          %li
-            \.#{@post.item.created_at.strftime("%m%d%y")}
-.bottom_half
-  %p#printslug.style1
-    %br{:clear => "all"}/
-    %Br/
-    = @post.item.slug
-  = render :partial => 'shared/' + @post.item.class.to_s.downcase, :locals => { :item => @post.item }
-  .keywords
-    %h4
-    %ul
-      = raw @post.item.tag_list.collect{|x| '<li>'+ link_to(x, {:controller => '/posts', :action => 'tag', :id => x})}.join(', ')+'</li>'
-  .share
-    %h4
-    %ul
-      %li
-        %a{:href => "javascript:location.href='http://www.facebook.com/sharer.php?u='+escape('http://www.version.org/#{@post.item.class.to_s.downcase}s/#{@post.item.id}')+'&t='+escape('#{@post.item.title}:#{@post.item.slug}')"}
-          %img{:src => "/images/logos/share/facebook.png", :target => "_blank", :title => "Click to post this to Facebook"} facebook
-      %li
-        %a{:href => "http://twitter.com/home?status=Currently reading: http://www.version.org/#{@post.item.class.to_s.downcase}s/#{@post.item.id}&title='#{@post.item.title}", :target => "_blank", :title => "Click to post this to Twitter"}
-          = image_tag '/images/logos/share/twitter.png'
-          twitter
-      %li
-        %a{:href => "http://del.icio.us/post?url=http://www.version.org/#{@post.item.class.to_s.downcase}s/#{@post.item.id}&title='#{@post.item.title}'"}
-          = image_tag '/images/logos/share/delicious.png'
-          del.icio.us
-      %li{:onclick => "Effect.Appear('emailpopup')"}
-        %img{:src => "/images/logos/share/mail.png"} email
-      %li
-        %a{:href => "#", :onclick => "window.print();return false;"}
-          %img{:src => "/images/logos/share/print.png"} print
-      %li
-        = link_to @post do
-          = image_tag('/images/logos/share/direct_link.png')
-          direct link
-  #emailpopup.email{:style => "float: right; display: none"}
-    = render :partial => 'layouts/email'
+= render :partial => 'show', locals: {post: @post}
