--- a/app/views/layouts/_categoryfilter.html.haml
+++ b/app/views/layouts/_categoryfilter.html.haml
@@ -4,15 +4,14 @@
     .category_list
       %ul
         - @categories.each do |cat|
-          %li
-            %a{:href => "#"}= link_to cat.name, {:controller => 'posts', :action => 'cat', :id => cat.friendly_id}
+          %li{class: @category.nil? ? false : (@category == cat ? :active : false)}= link_to cat.name, cat
         %li{:style => "border-right:none;"}
           %a{:href => "/posts"} all
   #tagbox.keywords{:onclick => "$('#tagdd').slideToggle();"}
     %h2
     %a{:href => "#"}
-    #tagdd.dropdown{:style => "display:none"}
-      .list
-        %ul
-          - @tags.each do |tag|
-            %li= link_to tag.name, {:controller => 'posts', :action => 'tag', :id => tag.name}
+  #tagdd.dropdown{:style => "display:none"}
+    .list
+      %ul
+        - @tags.each do |tag|
+          %li= link_to tag.name, {:controller => 'posts', :action => 'tag', :id => tag.name}
