--- a/app/views/shared/_image.html.haml
+++ b/app/views/shared/_image.html.haml
@@ -7,13 +7,12 @@
     = image_tag item.image4.url(:slide)
     = image_tag item.image5.url(:slide)
 
-  #slideshow-container.manual.fade
-    %ul.slideshow
-      %li= image_tag item.image1.url(:slide)
-      %li= image_tag item.image2.url(:slide)
-      %li= image_tag item.image3.url(:slide)
-      %li= image_tag item.image4.url(:slide)
-      %li= image_tag item.image5.url(:slide)
+  .slick-carousel
+    .slide= image_tag item.image1.url(:slide)
+    .slide= image_tag item.image2.url(:slide)
+    .slide= image_tag item.image3.url(:slide)
+    .slide= image_tag item.image4.url(:slide)
+    .slide= image_tag item.image5.url(:slide)
 
   - unless @sslaunch.blank?
     = @sslaunch
@@ -22,7 +21,3 @@
   - if current_user
     = link_to '[edit]', edit_admin_image_path(item)
 
-:javascript
-  $(document).ready(function() {  
-    slideShow(5000);
-    });
