--- a/app/views/shared/_sound.html.haml
+++ b/app/views/shared/_sound.html.haml
@@ -1,9 +1,39 @@
 .sound_entry
+  .sound_url= item.soundfile.url
   %p.sound_description
     = h item.description
-  %p
-    %p{:id => "#{item.id.to_s}_sound"} You need flash installed.
-    :javascript
-      AudioPlayer.embed("#{item.id.to_s}_sound", {soundFile: "#{item.soundfile.url}"});  
+  .jp-jplayer{:id => "sound_#{item.id.to_s}"}
+  #jp_container_1.jp-audio{"aria-label" => "media player", :role => "application"}
+    .jp-type-single
+      .jp-gui.jp-interface
+        .jp-volume-controls
+          %button.jp-mute{:role => "button", :tabindex => "0"} mute
+          %button.jp-volume-max{:role => "button", :tabindex => "0"} max volume
+          .jp-volume-bar
+            .jp-volume-bar-value
+        .jp-controls-holder
+          .jp-controls
+            %button.jp-play{:role => "button", :tabindex => "0"} play
+            %button.jp-stop{:role => "button", :tabindex => "0"} stop
+          .jp-progress
+            .jp-seek-bar
+              .jp-play-bar
+          .jp-current-time{"aria-label" => "time", :role => "timer"} &nbsp;
+          .jp-duration{"aria-label" => "duration", :role => "timer"} &nbsp;
+          .jp-toggles
+            %button.jp-repeat{:role => "button", :tabindex => "0"} repeat
+
+      .jp-no-solution
+        %span Update Required
+        To play the media you will need to either update your browser to a recent version or update your
+        = succeed "." do
+          %a{:href => "http://get.adobe.com/flashplayer/", :target => "_blank"} Flash plugin
+
+
+  
   - if current_user
-    = link_to '[edit]', edit_admin_sound_path(@item)
+    = link_to '[edit]', edit_admin_sound_path(item)
+ 
+= content_for :jquery do
+  :plain
+    audio_launch("sound_#{item.id.to_s}", '#{item.soundfile.url}');
