--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -123,6 +123,16 @@
       }
     }
   }
+  
+  footer {
+    .support {
+      width: 100%;
+      img {
+        max-width: 320px;
+        height: auto;
+      }
+    }
+  }
 }
 
 
