--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,22 +24,12 @@
           = render :partial => 'layouts/adminmenu'
     = yield
     %footer
-      %br{:clear => "all"}
-        .support
-          %a{:href => "http://visarts.ucsd.edu/", :target => "_blank"}
-            %img{:src => "/images/logos/visarts.png"}/
-          %a{:href => "http://dah.ucsd.edu/", :target => "_blank"}
-            %img{:src => "/images/logos/dash.png"}/
-          %a{:href => "http://www.calit2.net/", :target => "_blank"}
-            %img{:src => "/images/logos/calit2.png"}/
-          %a{:href => "http://humctr.ucsd.edu/", :target => "_blank"}
-            %img{:src => "/images/logos/ch.png"}/
-          %a{:href => "http://lab.softwarestudies.com/", :target => "_blank"}
-            %img{:src => "/images/logos/software_studies.png"}/
-          %a{:href => "http://www.ucira.ucsb.edu/index.html", :target => "_blank"}
-            %img{:src => "/images/logos/ucira.png"}/
-          %a{:href => "http://crca.ucsd.edu/", :target => "_blank"}
-            %img{:src => "/images/logos/crca.png"}/
+
+      .support
+        = link_to image_tag('logos/image1.png'), "http://visarts.ucsd.edu/", :target => "_blank"
+        = link_to image_tag('logos/division.png'), 'http://artsandhumanities.ucsd.edu/', target: :_blank
+        = link_to image_tag('logos/calit2.png'), "http://www.calit2.net/", target: :_blank
+
     :javascript
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
